--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lampadina - Assetta</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
 
 <body>
-    <main>
-        <h1 class="title">Lampadina</h1>
-        <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta">
-        <button id="interruttore">Accendi</button>
+    <header class="container text-center">
+        <h1 class="h1 display-1">Lampadina</h1>
+    </header>
+    <main class="container text-center">
+        <div class="row">
+
+            <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta" class="w-50 mx-auto">
+            <button class="btn btn-primary " id="interruttore">Accendi</button>
+
+        </div>
     </main>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
     <script src="./main.js"></script>
 </body>
 
