--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 
 <body>
     <header class="container text-center">
-        <h1 class="h1 display-1">Lampadina</h1>
+        <h1 class="h1">Lampadina</h1>
     </header>
     <main class="container text-center">
         <div class="row">
+            <div class="col col-6 d-flex flex-column mx-auto">
+                <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta" class="w-50 mx-auto">
+                <button class="btn btn-primary " id="interruttore">Accendi</button>
 
-            <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta" class="w-50 mx-auto">
-            <button class="btn btn-primary " id="interruttore">Accendi</button>
+            </div>
+
 
         </div>
     </main>
