--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <main class="container text-center">
         <div class="row">
             <div class="col col-6 d-flex flex-column mx-auto">
+                <!-- <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta" class="w-50 mx-auto"> -->
                 <img src="./img/white_lamp.png" id="lamp" alt="lampadina spenta" class="w-50 mx-auto">
+                <img src="./img/yellow_lamp.png" id="lamp" alt="lampadina accesa" class="w-50 mx-auto d-none">
                 <button class="btn btn-primary " id="interruttore">Accendi</button>
 
             </div>
